# postgresql_komarov_dpo

./: .gitignore  README.md  city_table.py  config.yaml  dbconnection.py  dbtable.py  main.py  project_config.py  pyproject.toml  route_table.py  task_1_2.txt
